--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,22 @@
   "name": "rtm",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js"
+    "start": "ts-node ./src/index.ts",
+    "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "ws": "^7.2.3"
+    "random_chinese_fantasy_names": "^0.1.18",
+    "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.10",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
