--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^2.42.1",
     "socket.io-client": "^4.5.4",
     "vue": "^3.2.41"
   },
